WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161213
Web Inspector: ScriptProfilerAgent and HeapAgent should do less work when frontend disconnects
https://bugs.webkit.org/show_bug.cgi?id=161213
Summary
Web Inspector: ScriptProfilerAgent and HeapAgent should do less work when fro...
Joseph Pecoraro
Reported
2016-08-25 14:52:53 PDT
Summary: ScriptProfilerAgent and HeapAgent should do less work when frontend disconnects Steps to Reproduce: 1. Inspect a JSContext 2. Start a Timeline Recording 3. Close inspector => Agents do work that is not needed (take a snapshot, process samples)
Attachments
[PATCH] Proposed Fix
(5.24 KB, patch)
2016-08-25 14:55 PDT
,
Joseph Pecoraro
bburg
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(1.18 MB, application/zip)
2016-08-25 16:18 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-08-25 14:53:12 PDT
<
rdar://problem/28017986
>
Joseph Pecoraro
Comment 2
2016-08-25 14:55:20 PDT
Created
attachment 287023
[details]
[PATCH] Proposed Fix
Build Bot
Comment 3
2016-08-25 16:18:15 PDT
Comment on
attachment 287023
[details]
[PATCH] Proposed Fix
Attachment 287023
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1942220
New failing tests: imported/w3c/web-platform-tests/html/dom/interfaces.html
Build Bot
Comment 4
2016-08-25 16:18:18 PDT
Created
attachment 287039
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Blaze Burg
Comment 5
2016-08-25 16:24:37 PDT
Comment on
attachment 287023
[details]
[PATCH] Proposed Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=287023&action=review
r=me but please make EWS happy.
> Source/JavaScriptCore/ChangeLog:11 > + Don't take a file snapshot when disconnecting.
Nit: file snapshot? You mean heap?
Joseph Pecoraro
Comment 6
2016-08-25 17:06:20 PDT
(In reply to
comment #5
)
> Comment on
attachment 287023
[details]
> [PATCH] Proposed Fix > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=287023&action=review
> > r=me but please make EWS happy. > > > Source/JavaScriptCore/ChangeLog:11 > > + Don't take a file snapshot when disconnecting. > > Nit: file snapshot? You mean heap?
Typo of "final".
Joseph Pecoraro
Comment 7
2016-08-26 13:24:45 PDT
<
https://trac.webkit.org/changeset/205034
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug