Web Inspector: ScriptProfilerAgent and HeapAgent should do less work when frontend disconnects https://bugs.webkit.org/show_bug.cgi?id=161213 <rdar://problem/28017986>

Reviewed by Brian Burg.

* inspector/agents/InspectorHeapAgent.cpp:
(Inspector::InspectorHeapAgent::willDestroyFrontendAndBackend):
Don't take a final snapshot when disconnecting.

* inspector/agents/InspectorScriptProfilerAgent.cpp:
(Inspector::InspectorScriptProfilerAgent::willDestroyFrontendAndBackend):
(Inspector::InspectorScriptProfilerAgent::stopSamplingWhenDisconnecting):
* inspector/agents/InspectorScriptProfilerAgent.h:
* runtime/SamplingProfiler.h:
Don't process samples when disconnecting.

Canonical link: https://commits.webkit.org/179410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205034 268f45cc-cd09-0410-ab3c-d52691b4dbfc