Source/JavaScriptCore/runtime/SamplingProfiler.h
@@ -150,6 +150,7 @@ public:
     void processUnverifiedStackTraces(); // You should call this only after acquiring the lock.
     void setStopWatch(const LockHolder&, Ref<Stopwatch>&& stopwatch) { m_stopwatch = WTFMove(stopwatch); }
     void pause(const LockHolder&);
+    void clearData(const LockHolder&);
 
     // Used for debugging in the JSC shell/DRT.
     void registerForReportAtExit();
@@ -160,7 +161,6 @@ public:
     JS_EXPORT_PRIVATE void reportTopBytecodes(PrintStream&);
 
 private:
-    void clearData(const LockHolder&);
     void createThreadIfNecessary(const LockHolder&);
     void timerLoop();
     void takeSample(const LockHolder&, std::chrono::microseconds& stackTraceProcessingTime);
